syntax = "proto3";
package selfchain.identity;

import "gogoproto/gogo.proto";
import "selfchain/identity/zkp.proto";

option go_package = "selfchain/x/identity/types";

// Credential represents a verifiable credential
message Credential {
  string id = 1;
  string type = 2;
  string issuer = 3;
  string subject = 4;
  map<string, string> claims = 5;
  int64 issuance_date = 6;
  int64 expiration_date = 7;
  string status = 8;
  CredentialProof proof = 9;
}

// CredentialProof represents a proof for a credential
message CredentialProof {
  string type = 1;
  int64 created = 2;
  string verification_method = 3;
  string proof_purpose = 4;
}

// CredentialPresentation represents a selective disclosure of credential claims
message CredentialPresentation {
  string type = 1;
  int64 created = 2;
  string verifiable_credential = 3;
  CredentialProof proof = 4;
}
